--- a/.gitignore
+++ b/.gitignore
@@ -68,4 +68,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+#######################
+######user settings####
+#######################
 /yarn.lock
+/package-lock.json
