--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/maps": "^0.5.5",
+    "express": "^4.16.3",
     "jest-cli": "^23.6.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -11,7 +13,15 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server": "nodemon server.js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start-dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn start\"",
+    "start-prod": "npm run build && cross-env NODE_ENV=production npm run server",
+    "eject--": "react-scripts eject"
+  },
+  "devDependencies": {
+    "concurrently": "^4.0.1",
+    "cross-env": "^5.2.0",
+    "nodemon": "^1.18.4"
   }
 }
