--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@google/maps": "^0.5.5",
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
+    "axios-cancel": "^0.2.2",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -13,6 +15,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.6",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -29,11 +32,11 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "jest-cli": "^23.6.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.5.2",
     "react-dev-utils": "^5.0.2",
@@ -51,14 +54,15 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "server": "nodemon server.js",
-    "test": "node scripts/test.js --env=jsdom",
     "start-dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn start\"",
     "start-prod": "npm run build && cross-env NODE_ENV=production npm run server"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
     "cross-env": "^5.2.0",
-    "nodemon": "^1.18.4"
+    "node-sass": "^4.9.3",
+    "nodemon": "^1.18.4",
+    "sass-loader": "^7.1.0"
   },
   "jest": {
     "collectCoverageFrom": [
