Develop client-side

--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "simple-search-address",
   "version": "0.1.0",
+  "license": "MIT",
+  "description": "Demo project (client-side & server-side) for simple search on map of Google",
+  "author": {
+    "name": "Gleb Panteleev",
+    "email": "gleb.panteleyev@gmail.com"
+  },
   "private": true,
+  "proxy": "http://localhost:7000/",
   "dependencies": {
     "@google/maps": "^0.5.5",
     "autoprefixer": "7.1.6",
@@ -39,8 +46,10 @@
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.5.2",
+    "react-autosuggest": "^9.4.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
+    "react-google-maps": "^9.4.5",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -51,10 +60,10 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "client": "node scripts/start.js",
     "build": "node scripts/build.js",
     "server": "nodemon server.js",
-    "start-dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn start\"",
+    "start-dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start-prod": "npm run build && cross-env NODE_ENV=production npm run server"
   },
   "devDependencies": {
